# example-mod

./: CMakeLists.txt  about.md  mod.json
.github/workflows/: build-android.yml  build-windows.yml  build.yml
src/: main.cpp
